<resources>
    <string name="app_name">To Do List</string>
    <string name="input_hint">Enter a to-do</string>
    <string name="submit">Submit</string>
    <string name="three_menu_dots">Three menu dots</string>
    <string name="checkbox">CheckBox</string>
    <string name="todo">TODO</string>
    <string name="button_to_edit_to_do">Three vertical dots</string>
    <string name="edit_to_do">Edit to-do:</string>
    <string name="edit_due_date">Edit due date:</string>
    <string name="add_notes">Add notes:</string>
    <string name="notes_hint">Add additional information to your to-do here</string>
    <string name="title">Title</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_name">Task Name</string>
    <string name="due_date">Due Date</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add_tag">Add Tags</string>
    <string name="tag_name">Tag Name</string>
    <string name="name">Name</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="tag_hint">New/Existing Tag</string>
    <string name="due_date_none">Due date: none</string>
    <string name="filters">Filters</string>
    <string name="completed">Completed</string>
    <string name="incomplete">Incomplete</string>
</resources>